// compile with:
// protoc --go_out=. --go_opt=paths=source_relative config.proto
syntax="proto3";

option go_package = "github.com/packetflinger/q2admind/proto";

package proto;

message Config {
    string address = 1;         // ip addr
    uint32 port = 2;
    string database = 3;        // sqlite file
    string private_key = 4;     // path
    bool api_enabled = 5;
    string api_address = 6;     // ip addr
    uint32 api_port = 7;
    string client_directory = 9;
    string user_file = 10;
    string access_file = 11;
    string auth_file = 12;
    string rule_file = 20;
    string vpn_file = 21;       // VPN detection/action settings
    uint32 maintenance_time = 13; // seconds
    bool debug_mode = 14;
    string web_root = 15;       // where are website file?
    string log_file = 16;
    bool foreground = 17;
    string management_address = 18;
    uint32 management_port = 19;
    string ssh_address = 22;
    uint32 ssh_port = 23;
    string ssh_hostkey = 24;
    int32 verbose_level = 25;
    string api_secret = 26; // for signing JWTs, leave blank to autogenerate
}
